...

    ///Keychain reference for when we need to clear the keychain if someone logs out
    let keychain = KeychainSwift(keyPrefix: "iasl_")

    ///Variable for the top bar of the view
    let topBar = UIView()
    ///Variable for the label that holds the 'Chat" name
    let topLabel = UILabel()
    ///Back button variable for going to previous view controller
    let backButton = UIButton()
    ///Variable for the table view that holds the list of chats
    let tableView = UITableView()
    ///Variable closure for the logout button
...
    ///Variable closure for the button used to add a chat
    let addChatButton: UIButton = {
        //let image: UIImage = UIImage(named: "plus")!
        let button = UIButton()
        button.backgroundColor = .clear
        //button.setImage(image, for: .normal) //FIXME: get a different logo
        button.setTitle("Add", for: .normal)
        //button.layer.cornerRadius = button.frame.width / 2
        button.translatesAutoresizingMaskIntoConstraints = false
        button.addTarget(self, action: #selector(handleAddChat), for: .touchUpInside)
        return button
    }()

...

            self.messages.remove(at: indexPath.row)
            self.tableView.deleteRows(at: [indexPath], with: .bottom)
            self.tableView.reloadData()
        }

        let alert = UIAlertController(title: "This is permanent!", message: "Are you sure you want to delete this?", preferredStyle: .alert)
        alert.addAction(saveResponse)
        alert.addAction(doNotSaveResponse)

        self.present(alert, animated: true) {
            //alert was presented
        }
...
        tableView.bottomAnchor.constraint(equalTo: view.bottomAnchor).isActive = true
        tableView.leadingAnchor.constraint(equalTo: view.leadingAnchor).isActive = true
        tableView.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        tableView.register(UITableViewCell.self, forCellReuseIdentifier: "cell")
        tableView.delegate = self
        tableView.dataSource = self
        tableView.accessibilityIdentifier = "testingRemoteVCTableView"
        tableView.register(ChatUserCell.self, forCellReuseIdentifier: "chatCell")
        refreshControl.addTarget(self, action: #selector(refreshTableViewOnPull), for: .valueChanged)

        //adding the pull to refresh
        if #available(iOS 10.0, *) {
            tableView.refreshControl = refreshControl
...
        topBar.addSubview(backButton)
        backButton.translatesAutoresizingMaskIntoConstraints = false
        backButton.leadingAnchor.constraint(equalTo: topBar.leadingAnchor, constant: 20).isActive = true
        backButton.bottomAnchor.constraint(equalTo: topBar.bottomAnchor, constant: -10).isActive = true
        backButton.heightAnchor.constraint(equalToConstant: 30).isActive = true
        backButton.widthAnchor.constraint(equalToConstant: 30).isActive = true
        let tintedImage = #imageLiteral(resourceName: "back").withRenderingMode(.alwaysTemplate)
        backButton.setImage(tintedImage, for: .normal)
        backButton.tintColor = .white
        backButton.addTarget(self, action: #selector(backButtonTapped), for: .touchUpInside)
    }

    ///Handles what happens when the back button is tapped
...
